# COIM

./: README.md  pyproject.toml  setup.cfg
.github/workflow/: lint.yml
.github/workflows/: lint.yml
checks/: lint_files.sh
src/COIM/: __init__.py  constrain.py  constrain_add_scalar.py  constrain_constant_sum.py  constrain_custom.py  constrain_mul_scalar.py  operator.py
src/COIM/constraints/: __init__.py  constrain.py  constrain_add_scalar.py  constrain_constant_sum.py  constrain_custom.py  constrain_mul_scalar.py
tests/: add_scalar.py  constant_sum.py  custom.py  mul_scalar.py  multi_constrain.py  test_add_scalar.py  test_constant_sum.py  test_custom.py  test_mul_scalar.py  test_multi_constrain.py
