[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "COIM"
version = "0.0.2"
authors = [
  { name="Miguel Sarraf", email="miguel.sarraf@alumni.usp.br" },
]
description = "Constrain Operator for Inferential Models is a simple tool for pre and pos processing of data to eliminate redunduncy in datasets caused by dependency rules between the variables/columns."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "pandas==2.0.3",
  "numpy==1.20.3",
  "prettytable==3.9.0",
  "pytest==8.1.1"
]
classifiers = [
	"Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Pre-processors"
]

[project.urls]
Homepage = "https://github.com/MiguelSarraf/COIM"
Issues = "https://github.com/MiguelSarraf/COIM/issues"
